force-app/main/default/objects/SVMXC__SM_Overnight_Stay_Policy__c/fields/SVMXC__SM_Allow_Monday_ONS__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Allow_Monday_ONS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether an overnight stay is allowed on a  Monday of the business hours</description>
    <inlineHelpText>Determines whether an overnight stay is allowed on a  Monday of the business hours</inlineHelpText>
    <label>Allow Monday Overnight Stay</label>
    <type>Checkbox</type>
</CustomField>