force-app/main/default/objects/SVMXC__SM_Overnight_Stay_Policy__c/fields/SVMXC__SM_Consecutive_ONS_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Consecutive_ONS_Per_Week__c</fullName>
    <description>Maximum number of consecutive days a technician can stay overnight in a work shift week.</description>
    <inlineHelpText>Determines the number of consecutive days a techician can take overnight</inlineHelpText>
    <label>Max Consecutive Overnight Stays</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>