force-app/main/default/objects/SVMXC__SM_Overnight_Stay_Policy__c/fields/SVMXC__SM_Total_ONS_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Total_ONS_Per_Week__c</fullName>
    <description>Determines the total number overnights a technician can do.</description>
    <inlineHelpText>Determines the toltal number overnights a technician can do</inlineHelpText>
    <label>Total Overnight Stays</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>