force-app/main/default/objects/SVMXC__SM_Overnight_Stay_Policy__c/validationRules/SVMXC__ONS_Validation_LimitTotalNumberOfONS.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__ONS_Validation_LimitTotalNumberOfONS</fullName>
    <active>true</active>
    <description>In a week total ONS should be greater than or equal to 0 and less than or equal to 7 days</description>
    <errorConditionFormula>OR(SVMXC__SM_Total_ONS_Per_Week__c &lt; 0, SVMXC__SM_Total_ONS_Per_Week__c &gt; 7)</errorConditionFormula>
    <errorMessage>Total overnight stays should be between 0 and 7 days per week.</errorMessage>
</ValidationRule>